--- a/Client(Frontend)/index.html
+++ b/Client(Frontend)/index.html
@@ -3,84 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relic Rush - Find the True Relic</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Relic Rush</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Cinzel:wght@600;700&display=swap" rel="stylesheet">
 </head>
-<body class="home-page">
-    <!-- Mystical Background -->
-    <div class="mystical-background"></div>
-    
-    <!-- Stars Animation -->
-    <div class="stars-container"></div>
-
-    <main class="event-container">
-        <!-- Header Section -->
-        <header class="home-header">
-            <h1 class="event-title">RELIC RUSH</h1>
-            <p class="event-subtitle">Find the True Relic Among the Fakes</p>
-            <p class="event-description">A mystical journey through Arabian Nights</p>
-        </header>
-
-        <!-- Lamps Container -->
-        <div class="lamps-container">
-            <div class="lamp-wrapper">
-                <div class="lamp genie-lamp" data-lamp="1">
-                    <div class="lamp-body"></div>
-                    <div class="lamp-spout"></div>
-                    <div class="lamp-handle"></div>
-                    <div class="genie-smoke"></div>
-                </div>
-                <p class="lamp-label">Lamp 1</p>
-            </div>
-
-            <div class="lamp-wrapper">
-                <div class="lamp genie-lamp" data-lamp="2">
-                    <div class="lamp-body"></div>
-                    <div class="lamp-spout"></div>
-                    <div class="lamp-handle"></div>
-                    <div class="genie-smoke"></div>
-                </div>
-                <p class="lamp-label">Lamp 2</p>
-            </div>
-
-            <div class="lamp-wrapper">
-                <div class="lamp genie-lamp" data-lamp="3">
-                    <div class="lamp-body"></div>
-                    <div class="lamp-spout"></div>
-                    <div class="lamp-handle"></div>
-                    <div class="genie-smoke"></div>
-                </div>
-                <p class="lamp-label">Lamp 3</p>
-            </div>
-
-            <div class="lamp-wrapper">
-                <div class="lamp genie-lamp" data-lamp="4">
-                    <div class="lamp-body"></div>
-                    <div class="lamp-spout"></div>
-                    <div class="lamp-handle"></div>
-                    <div class="genie-smoke"></div>
-                </div>
-                <p class="lamp-label">Lamp 4</p>
-            </div>
-        </div>
-
-        <!-- CTA Button -->
-        <div class="cta-section">
-            <button class="btn btn-golden" id="enterBtn">
-                <span class="btn-text">Enter the Desert</span>
-                <span class="btn-glow"></span>
-            </button>
-        </div>
-
-        <!-- Footer Info -->
-        <footer class="home-footer">
-            <p>Complete all 3 rounds to discover the True Relic</p>
-        </footer>
-    </main>
-
-    <script src="home.js"></script>
-</body>
-</html>
+<body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
